<resources>
    <string name="app_name">Asalari App</string>
    <string name="qr_image">QR_Image</string>
    <string name="mahsulot_nomi">Nomi</string>
    <string name="mahsulot_narxi">Narxi</string>
    <string name="home">Home</string>
    <string name="add_product">Mahsulot qo\'shish</string>
    <string name="qr_button">qr_button</string>
    <string name="olib_kelingan_sana">Sana: 10/10/2024</string>
    <string name="do_konga_joylash">Do\'konga joylash</string>
    <string name="qr_kodni_yuklab_olish">QR kodni yuklab olish</string>
    <string name="bekor_qilish">Bekor qilish</string>
    <string name="skanerlangan">Skanerlangan mahsulotlar</string>
    <string name="hisobot">Hisobot</string>
    <string name="yangi_savdo_boshlash">Yangi savdo boshlash</string>
    <string name="jami_narx_0_so_m">Jami narx: 0 so\'m</string>
    <string name="soni">Soni</string>
    <string name="empty1">Skannerlanganlar ro\'yxati bo\'sh!\nSavdoni boshlash uchun QR-kodni \nskanerlang</string>
    <string name="empty2">Ma\'lumotlar ba\'zasiga\n mahsulotlar ro\'yxati qo\'shilmagan!\n Savdoni boshlash uchun avval\n mahsulotlarni qo\'shing.</string>
    <string name="empty_box">empty box</string>
    <string name="x">x</string>
    <string name="yes">yes</string>
    <string name="delete">O\'chirish</string>
</resources>