<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/app_background"
    tools:context=".fragments.AddFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edtName"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edt_style"
            android:hint="@string/mahsulot_nomi"
            android:importantForAutofill="no"
            android:inputType="textCapSentences|textMultiLine"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#FFD4D0"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/edtPrice"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp"
            android:background="@drawable/edt_style"
            android:hint="@string/mahsulot_narxi"
            android:importantForAutofill="no"
            android:inputType="number"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#FFD4D0"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tvDay"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:layout_marginBottom="30dp"
            android:background="@drawable/edt_style"
            android:drawableEnd="@drawable/ic_date"
            android:drawableTint="@color/white"
            android:hint="@string/olib_kelingan_sana"
            android:padding="12dp"
            android:textColor="@color/white"
            android:textColorHint="#FFD4D0"
            android:textSize="22sp"
            tools:ignore="UseCompatTextViewDrawableXml" />

        <androidx.cardview.widget.CardView
            android:id="@+id/btnAdd"
            android:layout_width="280dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:backgroundTint="#009688"
            android:layout_gravity="end"
            android:layout_marginEnd="15dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:cardCornerRadius="8dp"
            app:cardElevation="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/do_konga_joylash"
                android:textColor="#DFFFFC"
                android:textSize="25sp"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:padding="170dp"
        android:visibility="gone" />
</FrameLayout>