<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_marginTop="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="#D6B4FF"
        app:cardCornerRadius="10dp"
        app:cardElevation="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:layout_marginStart="10dp"
                android:backgroundTint="@color/white"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <ImageView
                    android:id="@+id/qrImage"
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:contentDescription="@string/qr_image"
                    android:src="@drawable/download" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginVertical="10dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/productName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:text="@string/mahsulot_nomi"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/productPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="4dp"
                    android:text="@string/mahsulot_narxi"
                    android:textColor="@color/black"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@android:color/transparent"
        android:visibility="gone" />
</LinearLayout>