<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="0dp"
    android:backgroundTint="#009688">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp"
            app:strokeColor="@color/black"
            app:strokeWidth="1dp">

            <ImageView
                android:id="@+id/qrImage"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:contentDescription="@string/qr_image"
                android:src="@drawable/download" />
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tvDate"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:paddingHorizontal="20dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF6458"
                android:clickable="true"
                android:focusable="true"
                android:layout_marginEnd="5dp"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/bekor_qilish"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/btnDownload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#FF6458"
                android:clickable="true"
                android:layout_marginStart="5dp"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/qr_kodni_yuklab_olish"
                    android:textColor="@color/white"
                    android:padding="8dp"
                    android:textSize="16sp" />
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>